Added print in week 5

--- a/Week_5.ipynb
+++ b/Week_5.ipynb
@@ -1040,6 +1040,23 @@
     "m.title(\"After Imputing with Zero [0]\")\n",
     "m.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello World\")"
+   ]
   }
  ],
  "metadata": {
